# ts-trove

./: .gitignore  README.md  pyproject.toml
norebooks/: classification.ipynb
notebooks/: anomaly_detection.ipynb  classification.ipynb  classification.ipynb   forecasting.ipynb  signal_analysis.ipynb  time_series_eda.ipynb
src/ts_trove/: __init__.py
src/ts_trove/anomaly_detection/: __init__.py  base.py
src/ts_trove/classification/: __init__.py  base.py
src/ts_trove/eda/: univariate_eda_report.py  univaritate_eda.py
src/ts_trove/forecasting/: __init__.py  base.py
