[project]
name = "ts-trove"
version = "0.1.0"
description = "A project for understanding, implementing, and testing various time series techniques in forecasting, anomaly detection, and time series classification"
readme = "README.md"
authors = [
    { name = "cwhitz", email = "chester.w.hitz@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "matplotlib>=3.9.0",
    "scikit-learn>=1.5.0",
    "jupyter>=1.1.0",
    "notebook>=7.2.0",
]

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"
